# hanoi-speedrapp

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: build.yaml  check.yaml  release.yaml
src/: cli.rs  display.rs  hanoi.rs  highscores.rs  main.rs  play.rs  profiling.rs  util.rs
src/display/: poles.rs  themes.rs  windows.rs
src/play/: bot.rs  click.rs  drag_and_drop.rs  quick_keys.rs  replay.rs  swift_keys.rs
