[package]
name = "hanoi-speedrapp"
description = "Tower of Hanoi desktop app for speedrunning"
repository = "https://github.com/SpeckyYT/hanoi-speedrapp"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.4.1", default-features = false }
arrayvec = { version = "0.7.6", features = ["serde"] }
cached = "0.54.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
colorgrad = "0.7.0"
eframe = { version = "0.30.0", features = ["persistence", "glow"] }
egui_dnd = "0.11.0"
egui_extras = "0.30.0"
egui_plot = "0.30.0"
indoc = "2.0.5"
once_cell = "1.20.2"
pretty-duration = "0.1.1"
profiling = { version = "1.0.16", features = ["profile-with-puffin"] }
puffin = "0.19.0"
puffin_http = "0.16.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_with = "3.11.0"
strum = { version = "0.26.3", features = ["derive"] }
