[package]
name = "hanoi-speedrapp"
description = "Tower of Hanoi desktop app for speedrunning"
repository = "https://github.com/SpeckyYT/hanoi-speedrapp"
version = "0.5.1"
edition = "2024"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
cached = "0.55.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
colorgrad = "0.7.2"
eframe = { version = "0.32.0", features = ["persistence", "glow"] }
egui_dnd = "0.13.0"
egui_extras = "0.32.0"
egui_plot = "0.33.0"
indoc = "2.0.6"
num-to-words = "0.1.1"
pretty-duration = "0.1.1"
profiling = { version = "1.0.17", features = ["profile-with-puffin"] }
puffin = "0.19.1"
puffin_http = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
strum = { version = "0.27.1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
